<resources>
    <string name="app_name">TodoListMvp</string>
    <string name="to_do_list">To Do List</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="todo">todo</string>
    <string name="today">Today</string>
    <string name="delete_all">Delete All</string>
    <string name="empty_state_text">try adding some task here</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="hint">Add a for today...</string>
    <string name="saveChanges">Save Changes</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>

</resources>