<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6FAFC"
    tools:context=".main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mainAB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_toolbar"
        android:paddingHorizontal="12dp"
        android:paddingVertical="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                style="@style/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/to_do_list"
                android:textColor="@color/textColorOnSurface"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_gitlab_square_white_24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <EditText
                android:id="@+id/searchEt"
                style="@style/p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="8dp"
                android:hint="@string/search_tasks"
                android:inputType="text"
                android:paddingHorizontal="12dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColorHint="#78909C"
                tools:ignore="Autofill,RtlSymmetry,TouchTargetSizeCheck" />
        </RelativeLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:id="@+id/headerContainer"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteAllBtn"
                style="@style/SecondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/delete_all"
                android:textColor="#546E7A"
                android:textSize="12sp"
                app:icon="@drawable/ic_delete_24dp"
                app:iconSize="18dp"
                tools:ignore="RelativeOverlap" />


            <TextView
                android:id="@+id/todayTv"
                style="@style/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/today"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3.5dp"
                android:layout_below="@id/todayTv"
                android:layout_alignStart="@id/todayTv"
                android:layout_alignEnd="@id/todayTv"
                android:background="@drawable/shape_underline" />


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskListRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipChildren="true"
            android:clipToPadding="true"
            android:paddingVertical="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerContainer" />

        <LinearLayout
            android:id="@+id/emptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/headerContainer"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/empty_state"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/empty_state_text"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addNewTaskBtn"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="24dp"
        android:text="@string/add_new_task"
        app:icon="@drawable/ic_add_24dp"
        tools:ignore="TextContrastCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>